--- a/style.css
+++ b/style.css
@@ -28,14 +28,18 @@
 
 #left-side{
   float:left;
-  width: 250px;
+  width: 20%;
+  max-width: 220px;
   height: 100%;
   background:rgba(0,0,0,0.9);
 }
 
+
+
 #right-side{
   float:right;
-  width: calc(100% - 250px);
+  width:80%; 
+  min-width: calc(100% - 220px);
   height: 100%;
   overflow: auto;
 }
