--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 #wrapper{
   width: 100vw;
   height: 100vh;
-  font-size: 40px;
 }
 
 
@@ -34,8 +33,6 @@
   background:rgba(0,0,0,0.9);
 }
 
-
-
 #right-side{
   float:right;
   width:80%; 
@@ -44,6 +41,11 @@
   overflow: auto;
 }
 
+#navigazione{
+  width: 100%;
+  height: 100px;
+  background: green;
+}
 
 #player{
   background: red;
