--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
   box-sizing: border-box;
 }
 
-
-
 #wrapper{
   width: 100vw;
   height: 100vh;
@@ -25,6 +23,7 @@
   clear: both;
 }
 
+/*barra a sinistra*/
 #left-side{
   float:left;
   width: 20%;
@@ -33,6 +32,20 @@
   background:rgba(0,0,0,0.9);
 }
 
+#left-side .flex-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#brand{
+  height: 100px;
+  width: 100%;
+  background: grey
+}
+
+/*lato destro*/
 #right-side{
   float:right;
   width:80%; 
@@ -46,6 +59,10 @@
   height: 100px;
   background: green;
 }
+
+
+
+
 
 #player{
   background: red;
