--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+@media all and (max-width: 960px){
+  .hide-mobile{
+    display: none;
+  }
+}
+
+@media all and (min-width: 961px){
+  .hide-desktop{
+    display: none;
+  }
+}
+
 #wrapper{
   width: 100vw;
   height: 100vh;
@@ -39,10 +51,15 @@
   justify-content: space-between;
 }
 
-#brand{
+
+#brand  {
   height: 100px;
-  width: 100%;
-  background: grey
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#brand img{
+  height: 50px;
 }
 
 /*lato destro*/
