--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
   max-width: 220px;
   height: 100%;
   background:rgba(0,0,0,0.9);
+  color: gray
 }
 
 #left-side .flex-container{
@@ -51,13 +52,42 @@
   justify-content: space-between;
 }
 
+#left-side #recent{
+  margin-top: 30px;
+}
 
+#recent .label{
+  margin-bottom: 10px;
+}
+
+#recent .nav-button{
+  margin: 5px auto;
+}
+/*link di navigazione*/
+#left-side .nav-button{
+  width: 100%;
+}
+#left-side .nav-link{
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: inherit;
+  text-decoration: none;
+}
+
+#left-side .nav-link:hover{
+  color: white;
+  text-decoration: none;
+}
+
+/*logo*/
 #brand  {
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 #brand img{
   height: 50px;
 }
