--- a/style.css
+++ b/style.css
@@ -52,20 +52,31 @@
   justify-content: space-between;
 }
 
+
+/* #left-side .top,
+#left-side .bottom{
+  padding-left: 10px;
+}
+ */
+/*spaziatura etichette*/
 #left-side #recent{
   margin-top: 30px;
 }
 
 #recent .label{
   margin-bottom: 10px;
+  padding-left: 15px;
 }
 
 #recent .nav-button{
   margin: 5px auto;
 }
-/*link di navigazione*/
+
+
+/*link di navigazione superiori*/
 #left-side .nav-button{
   width: 100%;
+  padding-left: 15px;
 }
 #left-side .nav-link{
   display: block;
@@ -75,9 +86,10 @@
   text-decoration: none;
 }
 
-#left-side .nav-link:hover{
+#left-side .nav-button:hover{
   color: white;
   text-decoration: none;
+  border-left: 3px solid green
 }
 
 /*logo*/
@@ -99,18 +111,42 @@
   min-width: calc(100% - 220px);
   height: 100%;
   overflow: auto;
+  background:rgba(0,0,0,0.5);
 }
 
 #navigazione{
   width: 100%;
   height: 100px;
-  background: green;
 }
 
+#navigazione .flex-container{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+#navigazione .nav-label{
+  margin: 0 10px;
+  color: white;
+  opacity: 0.5;
+  position: relative;
+}
 
+#navigazione .nav-label:hover{
+  opacity: 1;
+  cursor: default;
+}
 
-
+#navigazione .nav-label:hover::after{
+  content: '';
+  width: 50%;
+  height: 3px;
+  left: 25%;
+	background: greenyellow;
+	position: absolute;
+	bottom: -5px;
+}
 #player{
   background: red;
   height: 100px;
