--- a/style.css
+++ b/style.css
@@ -233,6 +233,37 @@
   width: 40%;
 }
 
+#controlli .flex-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#controlli .seeker{
+  width: 100%;
+  margin-top: 10px;
+}
+
+#controlli .seeker .flex-container{
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#controlli .seeker .seeker-bar{
+  flex-grow: 1;
+}
+
+#controlli .seeker-bar input{
+  width: 100%;
+}
+
+
 #impostazioni {
   height: 100%;
   width: 25%;
